# real-time-data-lake

./: .gitignore  README.md  flink.py  ksql.sql  main.py  pyproject.toml
src/: config.py  errors.py  middleware.py  producer.py
src/db/: main.py  models.py
src/post/: routes.py  schemas.py  services.py
