[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "aioredis>=2.0.1",
    "apache-flink>=2.1.1",
    "avro>=1.12.1",
    "boto3>=1.41.5",
    "confluent-kafka>=2.12.2",
    "fastapi[standard]>=0.121.2",
    "fastavro>=1.12.1",
    "httpie>=3.2.4",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]
